--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,13 +1,84 @@
-
 spring:
+  # Database Configuration for MySQL
   jpa:
-    database: POSTGRESQL
+    database: MYSQL
     show-sql: true
     hibernate:
       ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+        format_sql: true
   datasource:
-    platform: postgres
-    url: jdbc:postgresql://127.0.0.1:5432/exam
-    username: online
-    password: admin
-    driverClassName: org.postgresql.Driver
+    url: jdbc:mysql://localhost:3306/exam?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    username: root
+    password: password
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  # Jackson Configuration
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    serialization:
+      WRITE_DATES_AS_TIMESTAMPS: false
+    deserialization:
+      fail-on-unknown-properties: false
+    default-property-inclusion: non_null
+
+  # Server Configuration
+server:
+  port: 8080
+  servlet:
+    context-path: /api
+  error:
+    include-message: always
+    include-binding-errors: always
+
+# Security Configuration
+security:
+  jwt:
+    secret-key: ytUk34lkjdLJhsgaoLksjg98sdjgaLDjgasldFslgiehglBOdlgja
+    expiration: 86400000  # 24 hours in milliseconds
+    refresh-token:
+      expiration: 604800000  # 7 days in milliseconds
+
+# Logging Configuration
+logging:
+  level:
+    root: INFO
+    org.springframework.web: INFO
+    org.hibernate: INFO
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    com.exam: DEBUG
+
+# API Documentation Configuration
+# API Documentation Configuration
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    operationsSorter: method
+    tagsSorter: alpha
+    disable-swagger-default-url: true
+    config-url: /api/v3/api-docs/swagger-config
+    url: /api/v3/api-docs
+
+# Custom Application Properties
+app:
+  cors:
+    allowed-origins: http://localhost:3000,http://localhost:8080
+    allowed-methods: GET,POST,PUT,DELETE,OPTIONS,PATCH
+    allowed-headers: Authorization,Content-Type,X-Requested-With
+    max-age: 3600
+  security:
+    public-urls: >
+      /api/auth/**,
+      /api-docs/**,
+      /swagger-ui/**,
+      /swagger-ui.html,
+      /v3/api-docs/**
+    admin-setup:
+      email: admin@example.com
+      password: Admin123!
+      name: System Administrator
